[package]
name = "gette"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "A Rust library for getting \"things\""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.9"
path-clean = "1.0.1"
aws-config = "0.56.1"
aws-sdk-s3 = "0.34"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.33", features = ["macros"] }
tokio-test = "0.4"
